<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OrderActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorRed"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:text="@string/txt_myshop"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ListView
            android:id="@+id/lvOrders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="665dp">

            <Button
                android:id="@+id/btnMyOrders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/myorders_button_background"
                android:text="@string/txt_myorders"
                android:textColor="@color/colorRed"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="656dp" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_button_background"
                android:text="@string/txt_exit"
                android:textColor="@color/colorWhite"
                android:textSize="17sp"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="656dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>